Вывод информации из базы

--- a/Yatube/templates/posts/group_list.html
+++ b/Yatube/templates/posts/group_list.html
@@ -4,6 +4,18 @@
   Записи сообщества
 {% endblock %}
 
+
 {% block content %}
-  {{ title }}
+<p><h3> Группа:  {{group}} </h3></p>
+{% for post in posts %}
+  <ul>
+    <li>
+      Автор: {{ post.author.get_full_name }}
+    </li>
+    <li>
+      Дата публикации: {{ post.pub_date|date:"d E Y" }}
+    </li>
+  </ul>
+  <p>{{ post.text }}</p> 
+{% endfor %} 
 {% endblock %} 
