--- a/Yatube/templates/posts/index.html
+++ b/Yatube/templates/posts/index.html
@@ -5,5 +5,17 @@
 {% endblock %}
 
 {% block content %}
-  {{ title }}
+{% for post in posts %}
+  <ul>
+    <li>
+      Автор: {{ post.author.get_full_name }}
+    </li>
+    <li>
+      Дата публикации: {{ post.pub_date|date:"d E Y" }}
+    </li>
+  </ul>
+  <p>{{ post.text }}</p>    
+  <a href="{% url 'group_post' p.slug %}">все записи группы</a>
+  {% if not forloop.last %}<hr>{% endif %}
+{% endfor %} 
 {% endblock %} 
