--- a/Yatube/templates/posts/index.html
+++ b/Yatube/templates/posts/index.html
@@ -14,8 +14,11 @@
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
     </li>
   </ul>
-  <p>{{ post.text }}</p>    
-  <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+  <p>{{ post.text }}</p>
+  {% if post.group  %}
+     <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+  {% else %}
+  {% endif %}  
   {% if not forloop.last %}<hr>{% endif %}
 {% endfor %} 
 {% endblock %} 
